--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+        <logback.version>1.2.10</logback.version>
     </properties>
 
     <repositories>
@@ -49,18 +50,61 @@
 			<artifactId>c4s.artifact.api</artifactId>
 			<version>4.1.5-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
             <groupId>at.jku.isse.designspace.sdk</groupId>
             <artifactId>main</artifactId>
             <version>4.0</version>
             <scope>compile</scope>
-        </dependency>
+        </dependency> -->
         <dependency>
+			<groupId>at.jku.isse.designspace</groupId>
+			<artifactId>core</artifactId>
+			<version>4.0</version>
+			<scope>compile</scope>
+		</dependency>
+<!-- 		<dependency>
+			<groupId>at.jku.isse.designspace</groupId>
+			<artifactId>interface</artifactId>
+			<version>4.0</version>
+			<scope>compile</scope>
+		</dependency> -->
+		<dependency>
+            <groupId>at.jku.isse.designspace</groupId>
+            <artifactId>rule</artifactId>
+            <version>4.0</version>
+            <scope>compile</scope>
+        </dependency>
+<!--         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>5.2.3.RELEASE</version>
             <scope>compile</scope>
-        </dependency>
+        </dependency> -->
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>2.2.3.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+			<version>2.2.3.RELEASE</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-logging</artifactId>
+			<version>2.2.3.RELEASE</version>
+		</dependency>
+
+		<!-- Spring RestController -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>2.2.3.RELEASE</version>
+		</dependency>
+        
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -85,11 +129,31 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
+        
+        		<!-- Test suite -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.4.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.4.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<version>5.4.2</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
     <build>
         <plugins>
-        			<plugin> 
+<!--         			<plugin> 
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
 				<version>2.5.2</version>
@@ -111,7 +175,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin> 
+			</plugin>  -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
