--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ at.jku.repositoryCache.enabled = true
 
 # 'true' shows a folder hierarchy in the server GUI browser, 'false' falls back to a ElementType-instance hierarchy
 at.jku.gui.folderTree.enabled = true
+
+# in case the file does not exist, it will be created.
+persistence.enabled = true
+persistencePath=/persistence/save.ds
+
+spring.output.ansi.enabled=ALWAYS
+
+captureInstanceTypes=false
+captureInstances=false
+capturePath=/main/scenarios/
