refactored for better integration

--- a/application.properties
+++ b/application.properties
@@ -12,7 +12,8 @@ at.jku.gui.folderTree.enabled = true
 
 
 # in case the file does not exist, it will be created.
-persistence.enabled = true
+persistence.enabled = false
 persistencePath=/persistence/save.ds
 
 spring.output.ansi.enabled=ALWAYS
+debug.configsource=c4s.passiveprocessengine.v3
