--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,6 @@
 # The main gRPC port to be used by the default broker and factory services
 grpc.port=50051
-#grpc.host=192.168.17.129
-server.port=8080
+server.port=7171
 logging.level.root=WARN
 logging.level.at.jku=DEBUG
 
@@ -11,7 +10,7 @@ at.jku.repositoryCache.enabled = true
 at.jku.gui.folderTree.enabled = true
 
 # in case the file does not exist, it will be created.
-persistence.enabled = true
+persistence.enabled = false
 persistencePath=/persistence/save.ds
 
 spring.output.ansi.enabled=ALWAYS
@@ -19,3 +18,11 @@ spring.output.ansi.enabled=ALWAYS
 captureInstanceTypes=false
 captureInstances=false
 capturePath=/main/scenarios/
+#replayAtStartup=
+#replayAtStartup=calculator.txt,requirements.txt
+
+
+
+
+
+
