--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>JKU.ISSE</groupId>
+    <groupId>at.jku.isse.designspace.passiveprocessengine</groupId>
     <artifactId>c4s.passiveprocessengine.v3</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.4-SNAPSHOT</version>
 
     <distributionManagement>
     	<repository>
@@ -50,33 +50,17 @@
 			<artifactId>c4s.artifact.api</artifactId>
 			<version>4.1.10-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-            <groupId>at.jku.isse.designspace.sdk</groupId>
-            <artifactId>main</artifactId>
-            <version>4.0</version>
-        </dependency> 
         <dependency>
 			<groupId>at.jku.isse.designspace</groupId>
 			<artifactId>core</artifactId>
-			<version>4.0</version>
+			<version>LATEST</version>
 		</dependency>
-<!-- 		<dependency>
-			<groupId>at.jku.isse.designspace</groupId>
-			<artifactId>interface</artifactId>
-			<version>4.0</version>
-			<scope>compile</scope>
-		</dependency> -->
 <dependency>
             <groupId>at.jku.isse.designspace</groupId>
             <artifactId>rule</artifactId>
-            <version>4.0</version>
+            <version>4.0.2-SNAPSHOT</version>
         </dependency> 
-<!--         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>5.2.3.RELEASE</version>
-            <scope>compile</scope>
-        </dependency> -->
+
          <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
