--- a/pom.xml
+++ b/pom.xml
@@ -46,15 +46,15 @@
 	</repositories>
 
 	<dependencies>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>JKU.ISSE</groupId>
 			<artifactId>c4s.artifact.api</artifactId>
 			<version>4.1.12-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>at.jku.isse.designspace</groupId>
 			<artifactId>core</artifactId>
-			<version>4.1.0-SNAPSHOT</version>
+			<version>4.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>at.jku.isse.designspace</groupId>
