--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.6</version>
 		</dependency>
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.2</version>
+		</dependency>
 
 		<!-- Test suite -->
 		<dependency>
