simplified and streamlines state transition semantics

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>at.jku.isse.designspace.passiveprocessengine</groupId>
 	<artifactId>c4s.passiveprocessengine.v3</artifactId>
-	<version>0.3.1-SNAPSHOT</version>
+	<version>0.4.0-SNAPSHOT</version>
 
 	<distributionManagement>
 		<repository>
@@ -89,9 +89,9 @@
 		</dependency>
 		<!-- Statemachine -->
 		<dependency>
-			<groupId>com.github.oxo42</groupId>
+			<groupId>com.github.stateless4j</groupId>
 			<artifactId>stateless4j</artifactId>
-			<version>2.5.0</version>
+			<version>2.6.0</version>
 		</dependency>
 		<!-- Inject -->
 		<dependency>
