started introducing wrapper layer across ds classes, doesnt compile atm

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>at.jku.isse.designspace.passiveprocessengine</groupId>
 	<artifactId>c4s.passiveprocessengine.v3</artifactId>
-	<version>0.6.0-SNAPSHOT</version>
+	<version>0.6.1-SNAPSHOT</version>
 
 	<distributionManagement>
 		<repository>
@@ -22,6 +22,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
 		<logback.version>1.2.10</logback.version>
+		<lombok.version>1.18.30</lombok.version>
 	</properties>
 
 	<repositories>
@@ -46,12 +47,8 @@
 	</repositories>
 
 	<dependencies>
-<!-- 		<dependency>
-			<groupId>JKU.ISSE</groupId>
-			<artifactId>c4s.artifact.api</artifactId>
-			<version>4.1.12-SNAPSHOT</version>
-		</dependency> -->
-		<dependency>
+
+<!--		<dependency>
 			<groupId>at.jku.isse.designspace</groupId>
 			<artifactId>core</artifactId>
 			<version>4.4.0-SNAPSHOT</version>
@@ -60,8 +57,12 @@
 			<groupId>at.jku.isse.designspace</groupId>
 			<artifactId>rule</artifactId>
 			<version>4.5.1-SNAPSHOT</version>
+		</dependency> -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
