--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>at.jku.isse.designspace.passiveprocessengine</groupId>
 	<artifactId>c4s.passiveprocessengine.v3</artifactId>
-	<version>0.6.1-SNAPSHOT</version>
+	<version>0.7.0-SNAPSHOT</version>
 
 	<distributionManagement>
 		<repository>
@@ -48,7 +48,7 @@
 
 	<dependencies>
 
-<!--		<dependency>
+		<dependency>
 			<groupId>at.jku.isse.designspace</groupId>
 			<artifactId>core</artifactId>
 			<version>4.4.0-SNAPSHOT</version>
@@ -57,7 +57,7 @@
 			<groupId>at.jku.isse.designspace</groupId>
 			<artifactId>rule</artifactId>
 			<version>4.5.1-SNAPSHOT</version>
-		</dependency> -->
+		</dependency> 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
