--- a/pom.xml
+++ b/pom.xml
@@ -47,17 +47,28 @@
 	</repositories>
 
 	<dependencies>
-
-		<dependency>
+        <dependency>
+            <groupId>at.jku.isse.designspace</groupId>
+            <artifactId>artifact-connector.core</artifactId>
+            <version>2.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>at.jku.isse.designspace</groupId>
+            <artifactId>artifact-connector.ds5wrapper</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+<!--		<dependency>
 			<groupId>at.jku.isse.designspace</groupId>
 			<artifactId>core</artifactId>
 			<version>5.0</version>
-		</dependency>
-		<dependency>
+		</dependency>-->
+<!--		<dependency>
 			<groupId>at.jku.isse.designspace</groupId>
 			<artifactId>service-rule</artifactId>
 			<version>5.0</version>
-		</dependency> 
+		</dependency> -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
