--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
 			<artifactId>logstash-logback-encoder</artifactId>
 			<version>7.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.17.0</version>
+			<!--<version>2.15.2</version>--> 
+		</dependency>
 
 		<!-- Test suite -->
 				<dependency>
