--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>at.jku.isse.designspace.passiveprocessengine</groupId>
 	<artifactId>c4s.passiveprocessengine.v3</artifactId>
-	<version>1.0.6-SNAPSHOT</version>
+	<version>1.0.8-SNAPSHOT</version><!-- even numbers when using DS4, odd numbers when using DS5-->
 
 	<distributionManagement>
 		<repository>
@@ -50,13 +50,13 @@
         <dependency>
             <groupId>at.jku.isse.designspace</groupId>
             <artifactId>artifact-connector.core</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.6</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>at.jku.isse.designspace</groupId>
             <artifactId>artifact-connector.ds4wrapper</artifactId>
-            <version>1.0.5</version>
+            <version>1.0.6</version>
             <scope>compile</scope>
         </dependency>
         
