--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
 	<groupId>at.jku.isse.designspace.passiveprocessengine</groupId>
 	<artifactId>c4s.passiveprocessengine.v3</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 
 	<distributionManagement>
 		<repository>
-			<id>JKU.ISSE</id>
-			<url>http://3.66.206.6:9999/snapshots</url>
+			<id>JKU.ISSE.MAVEN</id>
+             <url>https://isse.jku.at/reposilite/snapshots</url>
 		</repository>
 	</distributionManagement>
 
@@ -37,8 +37,8 @@
 		</repository>
 		<!-- own ones -->
 		<repository>
-			<id>JKU.ISSE</id>
-			<url>http://3.66.206.6:9999/snapshots</url>
+			<id>JKU.ISSE.MAVEN</id>
+             <url>https://isse.jku.at/reposilite/snapshots</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -52,33 +52,26 @@
             <version>3.0.0</version>
             <scope>compile</scope>
         </dependency>
-<!--        <dependency>
-            <groupId>at.jku.isse.designspace</groupId>
-            <artifactId>artifact-connector.ds4wrapper</artifactId>
-            <version>1.0.5</version>
-            <scope>compile</scope>
-        </dependency>-->
+
         <dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>apache-jena-libs</artifactId>
 			<type>pom</type>
 			<version>5.1.0</version>
 		</dependency>
-        
+        <dependency>
+  			<groupId>at.jku.isse</groupId>
+  			<artifactId>artifacteventstreaming</artifactId>
+  			<version>0.0.5-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-autoconfigure</artifactId> 
-			<version>2.2.3.RELEASE</version> <scope>compile</scope> </dependency> <dependency> 
-			<groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-logging</artifactId> 
-			<version>2.2.3.RELEASE</version> </dependency> -->
 
-		<!-- Spring RestController <dependency> <groupId>org.springframework.boot</groupId> 
-			<artifactId>spring-boot-starter-web</artifactId> <version>2.2.3.RELEASE</version> 
-			</dependency> -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -90,12 +83,7 @@
 			<artifactId>stateless4j</artifactId>
 			<version>2.6.0</version>
 		</dependency>
-		<!-- Inject -->
-<!--		<dependency>
-			<groupId>com.google.inject</groupId>
-			<artifactId>guice</artifactId>
-			<version>4.2.3</version>
-		</dependency>-->
+
 		<!-- JSON -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
