--- a/pom.xml
+++ b/pom.xml
@@ -85,12 +85,12 @@
 			<artifactId>stateless4j</artifactId>
 			<version>2.6.0</version>
 		</dependency>
-		<!-- Inject -->
+		<!-- Inject 
 		<dependency>
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
 			<version>4.2.3</version>
-		</dependency>
+		</dependency> -->
 		<!-- JSON -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
